--- a/templates/resume/printKO.html.twig
+++ b/templates/resume/printKO.html.twig
@@ -23,13 +23,13 @@
 {% endmacro %}
 
 <!DOCTYPE html>
-<html lang="{{ 'en' }}">
+<html lang="{{ 'ko' }}">
   <head>
     <meta charset="UTF-8" />
     <title>{{ cv.firstname }} {{ cv.lastname }}</title>
     <style>
       :root {
-        font-family: 'DejaVu Sans', 'Noto Sans', Arial, sans-serif;
+        font-family: "Noto Sans CJK KR", "Noto Sans KR", sans-serif;
         color: #1c1c1c;
       }
 
